# Nexo_ROS_SDK

BASE/xpkg_comm/: CMakeLists.txt  README.md  package.xml
BASE/xpkg_comm/include/COMM_INF/: comm_inf_com.h  comm_inf_tcp.h
BASE/xpkg_comm/include/FUNC/: comm_func.h
BASE/xpkg_comm/include/ROS_INF/: ros_interface.h
BASE/xpkg_comm/launch/: xnode_comm.launch
BASE/xpkg_comm/scripts/: CAN_COM_HUB.rules  script_init.sh
BASE/xpkg_comm/src/: xnode_comm.cpp
BASE/xpkg_comm/src/COMM_INF/: comm_inf_com.cpp  comm_inf_tcp.cpp
BASE/xpkg_comm/src/FUNC/: comm_func.cpp
BASE/xpkg_comm/src/ROS_INF/: ros_interface.cpp
BASE/xpkg_custom/: CMakeLists.txt  package.xml
BASE/xpkg_custom/include/ROS_INF/: ros_interface_custom.h
BASE/xpkg_custom/launch/: xnode_custom.launch
BASE/xpkg_custom/src/: xnode_custom.cpp
BASE/xpkg_custom/src/ROS_INF/: ros_interface_custom.cpp
BASE/xpkg_msgs/: CMakeLists.txt  package.xml
BASE/xpkg_vehicle/: CMakeLists.txt  README.md  package.xml
BASE/xpkg_vehicle/include/FUNC/: vehicle_func.h  vehicle_func_odom.h
BASE/xpkg_vehicle/include/LIB_FILE/: lib_file_ini.h
BASE/xpkg_vehicle/include/ROS_INF/: ros_interface.h
BASE/xpkg_vehicle/ini/: device_id_list.ini
BASE/xpkg_vehicle/launch/: xnode_vehicle.launch
BASE/xpkg_vehicle/scripts/: script_init.sh
BASE/xpkg_vehicle/src/: xnode_vehicle.cpp
BASE/xpkg_vehicle/src/FUNC/: vehicle_func.cpp  vehicle_func_odom.cpp
BASE/xpkg_vehicle/src/LIB_FILE/: lib_file_ini.cpp
BASE/xpkg_vehicle/src/ROS_INF/: ros_interface.cpp
BRINGUP/xpkg_bringup/bringup_vehicle/launch/: README.md  bringup_basic_ctrl.launch  bringup_joystick_ctrl.launch  bringup_key_ctrl.launch
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/src/: add_ints_client.cpp  add_ints_server.cpp  listener.cpp  talker.cpp
